# MineLab

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  index.rst  installation.rst  quickstart.rst
docs/modules/: data_management.rst  drilling_blasting.rst  economics.rst  environmental.rst  equipment.rst  geomechanics.rst  geostatistics.rst  hydrogeology.rst  index.rst  mine_planning.rst  mineral_processing.rst  production.rst  resource_classification.rst  surveying.rst  underground_mining.rst  utilities.rst  ventilation.rst
examples/: 01_geostatistics_workflow.py  02_economic_evaluation.py  03_blast_design.py  04_mineral_processing.py  05_slope_stability.py  06_ventilation_network.py  07_pit_optimization.py  08_complete_mine_workflow.py  09_utilities_reference.py  10_equipment_fleet.py  11_production_blending.py  12_underground_mining.py  13_hydrogeology.py  README.md
src/minelab/: __init__.py
tests/: conftest.py
tests/test_data_management/: test_compositing.py  test_desurvey.py  test_drillholes.py  test_io_formats.py  test_validation.py
tests/test_drilling_blasting/: test_blast_design.py  test_blastability.py  test_flyrock.py  test_fragmentation.py  test_underground_blast.py  test_vibration.py
tests/test_economics/: test_cashflow.py  test_cost_models.py  test_monte_carlo.py  test_project_finance.py  test_revenue.py  test_sensitivity.py  test_taxation.py
tests/test_environmental/: test_acid_drainage.py  test_carbon.py  test_closure.py  test_dust.py  test_tailings.py  test_water_balance.py
tests/test_equipment/: test_conveyors.py  test_fleet_matching.py  test_fuel_consumption.py  test_productivity.py  test_pumps.py  test_truck_cycle.py
tests/test_geomechanics/: test_hoek_brown.py  test_rock_mass_classification.py  test_slope_stability.py  test_support_design.py  test_underground_excavations.py  test_wedge_analysis.py
tests/test_geostatistics/: test_block_model.py  test_declustering.py  test_kriging.py  test_simulation.py  test_transformations.py  test_variogram_experimental.py  (+2 more)
(+157 files in other folders)
