[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minelab"
dynamic = ["version"]
description = "Comprehensive mining and metallurgical engineering library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Argenis Marin", email = "armarina@unal.edu.co" }]
keywords = ["mining", "metallurgy", "geostatistics", "mineral processing", "geomechanics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "plotly>=5.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "hypothesis>=6.82",
    "ruff>=0.1",
    "sphinx>=7.2",
    "sphinx-rtd-theme>=2.0",
]

[project.urls]
Homepage = "https://github.com/argenismarin/minelab"
Documentation = "https://github.com/argenismarin/minelab#readme"
Repository = "https://github.com/argenismarin/minelab"

[tool.hatch.version]
path = "src/minelab/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/minelab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["minelab"]

[tool.coverage.run]
source = ["minelab"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 85
